# blizzlikecore

./: .gitignore  CMakeLists.txt  CREDITS  PreLoad.cmake  README  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/macros/: CheckBuildDir.cmake
contrib/linux_mysql_backup/: README  automysqlbackup  automysqlbackup.conf  install.sh
contrib/linux_restarter/: README  blizzlike-restarter
contrib/registration_form/: README
contrib/registration_form/expanded/: README  db.conf.php.dist  index.php
contrib/registration_form/simple/: README  index.php
contrib/soap/: example.php
contrib/windows_extractor/: extractor.bat
contrib/windows_restarter/: core_restarter.bat  realm_restarter.bat
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: SFMT.h  randomc.h
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: ACE.cpp  ACE.h  ACE.inl  ARGV.cpp  Arg_Shifter.cpp  Argv_Type_Converter.cpp  Auto_Ptr.h  Auto_Ptr.inl  CDR_Stream.inl  CMakeLists.txt  Codeset_IBM1047.cpp  Configuration.cpp  Configuration_Import_Export.cpp  Containers_T.cpp  DEV_IO.cpp  DLL.cpp  DLL_Manager.cpp  Dev_Poll_Reactor.cpp  FILE_IO.cpp  FILE_IO.h  Framework_Component.cpp  Get_Opt.cpp  IOStream.cpp  Local_Memory_Pool.cpp  Local_Name_Space.cpp  Local_Name_Space_T.cpp  Log_Msg.cpp  Log_Record.cpp  Log_Record.inl  Logging_Strategy.cpp  Malloc_Allocator.cpp  Malloc_T.cpp  Monitor_Base.cpp  NT_Service.cpp  Notification_Queue.cpp  OS_NS_dirent.inl  OS_NS_dlfcn.inl  OS_NS_stdio.inl  OS_NS_stropts.inl  OS_NS_sys_uio.cpp  (+30 more)
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/source/: System.cpp  Triangle.cpp
dep/gsoap/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/mersennetwister/: MersenneTwister.h
dep/mysqllite/: CMakeLists.txt
dep/mysqllite/cmake/: mysql_version.cmake
dep/zlib/: CMakeLists.txt
doc/: EventAI.txt  FileHeaders.txt
patch/: anticheat.patch  telenpc.patch  warden.patch
sql/: README  characters.sql  create_mysql.sql  drop_mysql.sql  realmd.sql
sql/tools/: characters_item_duplicates_remove.sql  characters_pet_data_cleanup.sql
src/: CMakeLists.txt
src/BlizzLikeCore/: BCSoap.cpp  BCSoap.h  BlizzLikeCore.rc  CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  Main.cpp  Master.cpp  Master.h  RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  blizzlikecore.conf.dist  resource.h
src/BlizzLikeRealm/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BlizzLikeRealm.rc  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  blizzlikerealm.conf.dist  resource.h
src/collision/: BIH.cpp  BIH.h  CMakeLists.txt  IVMapManager.h  MapTree.cpp  MapTree.h  ModelInstance.cpp  ModelInstance.h  TileAssembler.cpp  TileAssembler.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h  VMapTools.h  WorldModel.cpp  WorldModel.h
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Network/: SocketDefines.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  SingletonImp.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMap.h
src/framework/Utilities/CountedReference/: Reference.h  ReferenceHolder.h  ReferenceImpl.h
src/framework/Utilities/LinkedReference/: RefManager.h  Reference.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AnimalRandomMovementGenerator.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt  Cell.h  CellImpl.h  Channel.cpp  (+264 more)
src/game/PrecompiledHeaders/: gamePCH.cpp  gamePCH.h
src/genrev/: CMakeLists.txt
src/scripts/: CMakeLists.txt
src/scripts/Custom/: custom_example.cpp  custom_gossip_codebox.cpp  on_events.cpp  test.cpp
src/scripts/EasternKingdoms/: alterac_mountains.cpp  arathi_highlands.cpp  blasted_lands.cpp  boss_kruul.cpp  burning_steppes.cpp  dun_morogh.cpp  duskwood.cpp  eastern_plaguelands.cpp  elwynn_forest.cpp  eversong_woods.cpp  ghostlands.cpp  hinterlands.cpp  ironforge.cpp  isle_of_queldanas.cpp  loch_modan.cpp  redridge_mountains.cpp  searing_gorge.cpp  silvermoon_city.cpp  silverpine_forest.cpp  stormwind_city.cpp  stranglethorn_vale.cpp  swamp_of_sorrows.cpp  tirisfal_glades.cpp  undercity.cpp  western_plaguelands.cpp  (+2 more)
src/shared/: Base.cpp  Base.h  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  DelayExecutor.cpp  DelayExecutor.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WorldPacket.h
src/tools/: CMakeLists.txt
(+449 files in other folders)
